WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50296
Context menus broken after WebKit2 goes into accelerated composting mode.
https://bugs.webkit.org/show_bug.cgi?id=50296
Summary
Context menus broken after WebKit2 goes into accelerated composting mode.
Simon Fraser (smfr)
Reported
2010-11-30 16:49:53 PST
Context menus don't work after WebKit2 goes into accelerated composting mode.
Attachments
Patch
(1.44 KB, patch)
2010-11-30 16:52 PST
,
Simon Fraser (smfr)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-11-30 16:50:13 PST
<
rdar://problem/8711486
>
Simon Fraser (smfr)
Comment 2
2010-11-30 16:52:27 PST
Created
attachment 75228
[details]
Patch
Sam Weinig
Comment 3
2010-11-30 16:55:27 PST
Comment on
attachment 75228
[details]
Patch Nice.
Simon Fraser (smfr)
Comment 4
2010-11-30 16:59:43 PST
http://trac.webkit.org/changeset/72982
Darin Adler
Comment 5
2010-11-30 17:17:06 PST
Accelerated composting mode: Makes the mulch much faster!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug