2010-11-30  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Sam Weinig.

        Context menus broken after WebKit2 goes into accelerated composting mode.
        https://bugs.webkit.org/show_bug.cgi?id=50296

        Override hitTest: on the WKView to exclude the child layer-backed view from
        hit testing, so that context menus work.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView hitTest:]):

Canonical link: https://commits.webkit.org/63437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72982 268f45cc-cd09-0410-ab3c-d52691b4dbfc